...
          </IconButton>
        ) : null}

        {canEdit ? (
          <IconButton
            size="sm"
            testID="note-viewer.button.edit"
            onPress={() => {
              HapticService.light();
              onEdit();
            }}
            accessibilityLabel="Edit"
          >
...
